--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -46,24 +46,22 @@
 
     <!-- Hero Section -->
     <section id="hero" class="hero section">
-  
-      <a href="/" class="logohome d-flex align-items-center" style="position: absolute; left: 50%; top: 20px; transform: translateX(-50%);">
-        <img src="{{url_for('static', filename='assets/img/logo_web.png')}}" alt="PSI Damai Logo" style="width: 120px; height: auto;">
-    </a>
+      <a href="/" class="logohome d-flex align-items-center">
+        <img src="{{url_for('static', filename='assets/img/logo_web.png')}}" alt="PSI Damai Logo">
+      </a>
     
-
-      <div class="container d-flex flex-column justify-content-end align-items-center text-center position-relative" data-aos="zoom-out" style="top: 5px;">
-    <p class="welcome-text mt-n2">Selamat Datang Di PSIDAMAI</p>
-    <p class="welcome-text1 px-3">PSIDAMAI adalah program mindfulness yang berkomitmen menyediakan layanan kesehatan mental inklusif, terjangkau, dan mudah diakses bagi dewasa muda di Indonesia.</p>
-    <p class="text-light fs-4 fw-bold mb-9">Jika kamu penasaran dengan kesehatan mental kamu klik tombol di bawah!</p>
-    <div class="d-flex mt-n2">
-      <a href="javascript:void(0);" class="btn-get-started scrollto" onclick="startTest()">Cek Kesehatan Mentalmu, Yuk!</a>
-    </div>
-    <p class="text-light fs-2 fw-bold mt-3">Kamu ingin mengakses program & materi mindfulness lebih lanjut? Klik tombol di bawah!</p>
-    <div class="d-flex mt-3">
-      <a href="/login" class="btn-get-started scrollto">Mulai Program</a>
-    </div>
-</div>
+      <div class="container d-flex flex-column justify-content-end align-items-center text-center position-relative" data-aos="zoom-out">
+        <p class="welcome-text mt-n2">Selamat Datang Di PSIDAMAI</p>
+        <p class="welcome-text1 px-3">PSIDAMAI adalah program mindfulness yang berkomitmen menyediakan layanan kesehatan mental inklusif, terjangkau, dan mudah diakses bagi dewasa muda di Indonesia.</p>
+        <p class="text-light fs-4 fw-bold mb-9">Jika kamu penasaran dengan kesehatan mental kamu klik tombol di bawah!</p>
+        <div class="d-flex mt-n2">
+          <a href="javascript:void(0);" class="btn-get-started scrollto" onclick="startTest()">Cek Kesehatan Mentalmu, Yuk!</a>
+        </div>
+        <p class="text-light fs-2 fw-bold mt-3">Kamu ingin mengakses program & materi mindfulness lebih lanjut? Klik tombol di bawah!</p>
+        <div class="d-flex mt-3">
+          <a href="/login" class="btn-get-started scrollto">Mulai Program</a>
+        </div>
+      </div>
 </div>
       <div
   class="modal fade"
