--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -194,7 +194,7 @@
                 </p>
                 <p>
                   <a href="/forget-password" style="color: #fff"
-                    >Lupa Password?</a
+                    >Ubah Password?</a
                   >
                 </p>
               </div>
