--- a/app/templates/auth/forget-password.html
+++ b/app/templates/auth/forget-password.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <title>Register</title>
+    <title>Ubah Password</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -190,6 +190,18 @@
                     Ubah Password
                   </button>
                 </div>
+                <!-- Kotak centang untuk menampilkan password -->
+                <div class="form-check">
+                  <input
+                    type="checkbox"
+                    class="form-check-input"
+                    id="showPasswordCheckbox"
+                    onclick="togglePasswordVisibility()"
+                  />
+                  <label class="form-check-label" for="showPasswordCheckbox">
+                    Tampilkan Password
+                  </label>
+                </div>
                 <div class="form-group d-flex justify-content-end mt-3">
                   <a href="/login" class="btn btn-secondary px-3">Kembali</a>
                 </div>
@@ -199,6 +211,20 @@
         </div>
       </div>
     </section>
+
+    <script>
+      function togglePasswordVisibility() {
+        const passwordField = document.getElementById("password");
+        const confirmPasswordField =
+          document.getElementById("konfirmasiPassword");
+        const isChecked = document.getElementById(
+          "showPasswordCheckbox"
+        ).checked;
+        passwordField.type = confirmPasswordField.type = isChecked
+          ? "text"
+          : "password";
+      }
+    </script>
 
     <script src="{{url_for('static', filename='assets/js/login/jquery.min.js')}}"></script>
     <script src="{{url_for('static', filename='assets/js/login/popper.js')}}"></script>
