--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -205,7 +205,7 @@
           </div>
           <h5 class="custom-card-title mt-3">Artikel</h5>
           <p class="custom-card-text">Kami memiliki beberapa artikel untuk menambah pengetahuan kamu terkait kesehatan mental. Klik tombol di bawah untuk mengakses artikel!</p>
-          <button class="btn btn-success" onclick="showLoginAlert()">Selengkapnya</button>
+          <button class="btn btn-success" onclick="window.location.href='/artikeldepan'">Selengkapnya</button>
         </div>
       </div>
     </div>
