--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -327,7 +327,7 @@
         <div class="col-lg-6 col-md-12 mb-4">
             <div class="ratio ratio-16x9">
                 <iframe 
-                    src="https://youtube.com/embed/726ye1kOmEY?si=0gxn35L0OAuJbntB" 
+                    src="https://youtube.com/embed/oX6v3nqJhwE"
                     title="YouTube video player" 
                     allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" 
                     allowfullscreen>
