--- a/app/templates/profile/profile.html
+++ b/app/templates/profile/profile.html
@@ -277,7 +277,7 @@
                           <div class="col-sm-12 d-flex justify-content-between align-items-center">
                               <div class="d-flex align-items-center">
                                   <i class="fas fa-exclamation-triangle me-2" aria-hidden="true"></i>
-                                  <p class="mb-0">Perkenalan Mindfulness Untuk Mahasiswa :</p>
+                                  <p class="mb-0 small">Perkenalan Mindfulness Untuk Mahasiswa :</p>
                               </div>
                               <div id="statusEndRoll">
                               </div>
