--- a/app/templates/auth/forget-password.html
+++ b/app/templates/auth/forget-password.html
@@ -122,6 +122,7 @@
                 text: `Password berhasil diubah!`,
                 icon: "success",
                 confirmButtonText: "Oke",
+                confirmButtonColor: "#39ce7d",
               }).then((result) => {
                 if (result.isConfirmed) {
                   window.location.replace("/login");
