--- a/app/templates/base/footer.html
+++ b/app/templates/base/footer.html
@@ -1,100 +1,98 @@
 <footer id="footer" class="footer dark-background">
   <div class="footer-top">
     <div class="container">
-      <!-- Funded by Section -->
+      <!-- Logo Utama (7 logo) -->
       <div class="row text-center align-items-center mb-4">
-        <div class="col-12 d-flex justify-content-start align-items-center">
-          <!-- Logo PSI -->
+        <div class="col-12 d-flex justify-content-center flex-wrap">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-2.png')}}"
-            alt="Logo PSI"
+            alt="Logo Website"
             class="img-fluid"
-            style="height: 60px; margin-right: 15px"
+            style="height: 60px; margin: 10px"
           />
-          <!-- Funded by Text -->
-          <div class="text-start">
-            <p class="fw-bold text-uppercase mb-1 text-dark">Funded by</p>
-            <img
-              src="{{url_for('static', filename='assets/img/clients/client-1.png')}}"
-              alt="Logo Koneksi"
-              class="img-fluid"
-              style="height: 40px"
-            />
-          </div>
+          <img
+            src="{{url_for('static', filename='assets/img/logo_web.png')}}"
+            alt="Logo 1"
+            class="img-fluid"
+            style="height: 60px; margin: 10px"
+          />
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-1.png')}}"
+            alt="Logo 2"
+            class="img-fluid"
+            style="height: 60px; margin: 10px"
+          />
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-9.png')}}"
+            alt="Logo 3"
+            class="img-fluid"
+            style="height: 60px; margin: 10px"
+          />
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-5.png')}}"
+            alt="Logo 4"
+            class="img-fluid"
+            style="height: 60px; margin: 10px"
+          />
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-11.jpg')}}"
+            alt="Logo 5"
+            class="img-fluid"
+            style="height: 60px; margin: 10px"
+          />
+          <img
+            src="{{url_for('static', filename='assets/img/clients/client-6.jpg')}}"
+            alt="Logo 6"
+            class="img-fluid"
+            style="height: 60px; margin: 10px"
+          />
         </div>
       </div>
 
+      <!-- Partner Kami (6 logo) -->
       <div class="row text-center">
-        <div class="col-12 text-start mb-3">
-          <h5 class="text-uppercase fw-bold text-dark">Partner Kita</h5>
+        <div class="col-12 mb-3">
+          <h5 class="text-uppercase fw-bold text-dark">Partner Kami</h5>
         </div>
-        <div class="col-3 col-md-2 my-2">
+        <div class="col-4 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-3.jpg')}}"
             alt="Client 3"
             class="img-fluid"
           />
         </div>
-        <div class="col-3 col-md-2 my-2">
+        <div class="col-4 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-4.png')}}"
             alt="Client 4"
             class="img-fluid"
           />
         </div>
-        <div class="col-3 col-md-2 my-2">
+        <div class="col-4 col-md-2 my-2">
           <img
-            src="{{url_for('static', filename='assets/img/clients/client-5.png')}}"
+            src="{{url_for('static', filename='assets/img/clients/client-7.png')}}"
             alt="Client 5"
             class="img-fluid"
           />
         </div>
-        <div class="col-3 col-md-2 my-2">
+        <div class="col-4 col-md-2 my-2">
           <img
-            src="{{url_for('static', filename='assets/img/clients/client-6.jpg')}}"
+            src="{{url_for('static', filename='assets/img/clients/client-8.png')}}"
             alt="Client 6"
             class="img-fluid"
           />
         </div>
-        <div class="col-3 col-md-2 my-2">
+        <div class="col-4 col-md-1 my-2">
           <img
-            src="{{url_for('static', filename='assets/img/clients/client-7.png')}}"
+            src="{{url_for('static', filename='assets/img/clients/client-10.jpg')}}"
             alt="Client 7"
             class="img-fluid"
           />
         </div>
-        <div class="col-3 col-md-2 my-2">
-          <img
-            src="{{url_for('static', filename='assets/img/clients/client-8.png')}}"
-            alt="Client 8"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-3 col-md-2 my-2">
-          <img
-            src="{{url_for('static', filename='assets/img/clients/client-9.png')}}"
-            alt="Client 9"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-3 col-md-2 my-2">
-          <img
-            src="{{url_for('static', filename='assets/img/clients/client-10.jpg')}}"
-            alt="Client 10"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-3 col-md-2 my-2">
-          <img
-            src="{{url_for('static', filename='assets/img/clients/client-11.jpg')}}"
-            alt="Client 11"
-            class="img-fluid"
-          />
-        </div>
-        <div class="col-3 col-md-2 my-2">
+        <div class="col-4 col-md-2 my-2">
           <img
             src="{{url_for('static', filename='assets/img/clients/client-12.png')}}"
-            alt="Client 11"
+            alt="Client 8"
             class="img-fluid"
           />
         </div>
