--- a/app/templates/dashboard/home.html
+++ b/app/templates/dashboard/home.html
@@ -51,9 +51,9 @@
       </a>
     
       <div class="container d-flex flex-column justify-content-end align-items-center text-center position-relative" data-aos="zoom-out">
-        <p class="welcome-text mt-n2">Selamat Datang Di PSIDAMAI</p>
-        <p class="welcome-text1 px-3">PSIDAMAI adalah program mindfulness yang berkomitmen menyediakan layanan kesehatan mental inklusif, terjangkau, dan mudah diakses bagi dewasa muda di Indonesia.</p>
-        <p class="text-light fs-4 fw-bold mb-9">Jika kamu penasaran dengan kesehatan mental kamu klik tombol di bawah!</p>
+        <p class="welcome-text mt-n2">Selamat Datang di PSIDAMAI</p>
+        <p class="welcome-text1 px-3">PSIDAMAI adalah program mindfulness yang disampaikan melalui website, agar dapat diakses dengan mudah bagi dewasa muda di Indonesia, kami berkomitmen menyediakan layanan kesehatan mental yang inklusif dan terjangkau bagi komunitas di Indonesia.</p>
+        <p class="text-light fs-4 fw-bold mb-9">Jika kamu penasaran dengan kesehatan mentalmu klik tombol di bawah!</p>
         <div class="d-flex mt-n2">
           <a href="javascript:void(0);" class="btn-get-started scrollto" onclick="startTest()">Cek Kesehatan Mentalmu, Yuk!</a>
         </div>
@@ -233,7 +233,7 @@
     <div class="row g-5">
 
       <div class="col-lg-8 col-md-6 content d-flex flex-column justify-content-center order-last order-md-first">
-        <h3>Jika anda merasa cemas atau membutuhkan bantuan, <em>kami</em>  siap mendukung anda melalui berbagai program yang tersedia.</h3>
+        <h3>Jika kamu merasa cemas atau membutuhkan bantuan, <em>kami</em>  siap mendukung kamu melalui berbagai program yang tersedia.</h3>
         <p> Jika mengalami kendala teknis atau kesulitan mengakses layanan kami, jangan ragu untuk menghubungi tim bantuan kami.</p>
         <a class="cta-btn align-self-start" href="#contact">Hubungi Kami</a>
       </div>
@@ -288,7 +288,7 @@
 
           <div class="tab-pane fade show active white-text" id="about-tab1">
 
-            <p>PSIDAMAI adalah salah satu inisiatif penelitian di bawah Fakultas Psikologi Universitas YARSI. Kami berkomitmen untuk memajukan bidang pengobatan berbasis mindfulness melalui pendekatan digital yang disesuaikan dengan kebutuhan unik komunitas Indonesia. Penelitian kami berfokus pada pengembangan, pengujian, dan penerapan program-program inovatif berbasis mindfulness yang dapat diperluas, terjangkau, efektif, dan sesuai dengan budaya untuk individu dan komunitas di seluruh Indonesia.</p>
+            <p>PSIDAMAI adalah salah satu inisiatif penelitian di bawah Fakultas Psikologi Universitas YARSI. kami berkomitmen untuk mengembangkan intervensi berbasis mindfulness melalui pendekatan digital. Penelitian kami berfokus pada pengembangan, pengujian, dan penerapan program-program inovatif berbasis mindfulness yang dapat diperluas, terjangkau, efektif, dan sesuai dengan budaya untuk individu dan komunitas di seluruh Indonesia.</p>
 
           </div><!-- End Tab 1 Content -->
 
