--- a/app/templates/dashboard/homesignin.html
+++ b/app/templates/dashboard/homesignin.html
@@ -244,7 +244,7 @@
               text: "Baca dengan seksama dari beberapa pertanyaan yang tersedia, pilih jawaban berdasarkan apa yang kamu rasakan dalam satu minggu ini.",
               icon: "warning",
               confirmButtonText: "Mulai Tes",
-              confirmButtonColor: "#28a745",
+              confirmButtonColor: '#39ce7d'
           }).then((result) => {
               if (result.isConfirmed) {
                 var myModal = new bootstrap.Modal(document.getElementById('screeningModal'));
